--- a/css/footer.css
+++ b/css/footer.css
@@ -1,14 +1,15 @@
 .sitefooter {
   background-color: var(--black);
   width: 100%;
-  height: 393px;
+  height: 1000px;
+  margin-bottom: 100px;
 }
 .sitefooter-container {
   display: flex;
   flex-direction: column;
 }
 .sitefooter__top {
-  margin-top: 144px;
+  margin-top: 120px;
   display: flex;
   justify-content: space-between;
   align-items: center;
