--- a/css/footer.css
+++ b/css/footer.css
@@ -28,6 +28,8 @@
   gap: 42px;
   a:hover {
     text-decoration: underline;
+    text-decoration-thickness: 1px;
+    text-underline-offset: 2px; 
   }
 }
 
