--- a/css/index.css
+++ b/css/index.css
@@ -108,3 +108,128 @@
   font-weight: 400;
   line-height: 26px;
 }
+
+@media only screen and (max-width: 375px) {
+  .main {
+    width: 100%;
+    max-width: 375px;
+  }
+  .hero {
+    margin: 0;
+    padding: 0;
+  }
+  .container {
+    margin: 0;
+    padding: 0;
+  }
+
+  .hero__container {
+    margin: 0;
+    width: 100%;
+    height: 843px;
+    padding: 0 !important;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--peach);
+    background-image: url(../images/home/desktop/bg-pattern-hero-home.svg);
+    background-position: left;
+    background-repeat: no-repeat;
+    overflow: hidden;
+  }
+  .hero__text {
+    text-align: center;
+    margin: 0;
+    padding: 0;
+  }
+  .hero__title {
+    margin: 80px 24px 14px;
+    padding: 0;
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 36px;
+    width: 327px;
+    height: 118px;
+  }
+  .hero__subtitle {
+    margin: 14px 24px 24px;
+    width: 327px;
+    height: 100px;
+  }
+
+  .hero__image {
+    position: relative;
+    right: 100px;
+    margin: 0;
+    width: 150%;
+  }
+
+  /* Design Cards */
+
+  .design {
+    margin: 0;
+    position: relative;
+  }
+
+  .design__card-wrapper {
+    margin-top: 120px;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    div:nth-child(1) {
+      width: 327px;
+      height: 250px;
+      background-image: url(../images/home/desktop/image-web-design-large.jpg);
+    }
+    div:nth-child(2) {
+      width: 327px;
+      height: 250px;
+      background-image: url(../images/home/desktop/image-app-design.jpg);
+    }
+    div:nth-child(3) {
+      width: 327px;
+      height: 250px;
+      background-image: url(../images/home/desktop/image-graphic-design.jpg);
+    }
+  }
+
+  /* Illustration */
+
+  .illustration {
+    color: var(--dark_grey);
+    background-image: url(../images/shared/desktop/bg-pattern-right.svg);
+    background-position: right 124px;
+    background-repeat: no-repeat;
+  }
+
+  .illustration__container {
+    display: flex;
+    flex-direction: column;
+    gap: 80px;
+  }
+
+  .illustration__card {
+    text-align: center;
+    width: 327px;
+    height: 412px;
+  }
+
+  .illustration__image {
+    background-image: url(../images/shared/desktop/bg-pattern-small-circle.svg);
+    background-position: right;
+    background-repeat: no-repeat;
+  }
+  .illustration__title {
+    margin-top: 48px;
+    margin-bottom: 32px;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 26px;
+    letter-spacing: 5px;
+  }
+  .illustration__subtitle {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+  }
+}
