--- a/css/footer.css
+++ b/css/footer.css
@@ -2,7 +2,6 @@
   background-color: var(--black);
   width: 100%;
   height: 1000px;
-
 }
 .sitefooter-container {
   display: flex;
@@ -26,10 +25,13 @@
 .sitefooter__nav-list {
   display: flex;
   gap: 42px;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
   a:hover {
     text-decoration: underline;
     text-decoration-thickness: 1px;
-    text-underline-offset: 2px; 
+    text-underline-offset: 2px;
   }
 }
 
@@ -72,5 +74,90 @@
   }
   svg:hover path {
     fill: #ffad9b;
+  }
+}
+
+@media only screen and (max-width: 375px) {
+  .sitefooter {
+    background-color: var(--black);
+    width: 100%;
+    height: 815px;
+    text-align: center;
+  }
+  .sitefooter-container {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 72px;
+  }
+  .sitefooter__top {
+    margin-top: 120px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    a {
+      color: var(--white);
+    }
+  }
+  .sitefooter__logo img {
+    width: 202px;
+    height: 27px;
+  }
+
+  .sitefooter__nav-list {
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
+    a {
+      margin-top: 32px;
+      width: 119px;
+      height: 14px;
+    }
+    a:hover {
+      text-decoration: underline;
+      text-decoration-thickness: 1px;
+      text-underline-offset: 2px;
+    }
+  }
+
+  .sitefooter__line {
+      display: none;
+  }
+  .sitefooter__bottom {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .sitefooter__adress {
+    width: 327px;
+    height: 78px;    
+    color: rgba(255, 255, 255, 50%);
+    margin-top: 40px;
+  }
+
+  .sitefooter__contact {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    color: rgba(255, 255, 255, 50%);
+    width: 327px;
+    height: 78px;    
+    margin-right: 197px;
+    font-weight: 700;
+    a {
+      color: rgba(255, 255, 255, 50%);
+    }
+  }
+
+  .sitefooter__socials {
+    justify-content: center;
+    margin-bottom: 64px;
+    display: flex;
+    gap: 16px;
+    svg {
+      cursor: pointer;
+    }
+    svg:hover path {
+      fill: #ffad9b;
+    }
   }
 }
