--- a/css/global.css
+++ b/css/global.css
@@ -182,13 +182,12 @@ a {
   color: var(--black);
 }
 
-@media only screen and (max-width: 394px) {
-  *{
-    box-sizing:border-box;
+@media only screen and (max-width: 375px) {
+  * {
+    box-sizing: border-box;
   }
   .container {
-    width: 100%;
-    margin: 0 30px;
+    width: 100vw;
     padding: 0;
   }
 
@@ -236,15 +235,18 @@ a {
   /* Design Cards */
   .design__card-2 {
     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; 
     gap: 30px;
     div:nth-child(1) {
       width: 327px;
-      height: 27px;
+      height: 250px;
       background-image: url(../../images/home/desktop/image-app-design.jpg);
     }
     div:nth-child(2) {
       width: 327px;
-      height: 27px;
+      height: 250px;
       background-image: url(../../images/home/desktop/image-graphic-design.jpg);
     }
   }
