--- a/pages/about/about.css
+++ b/pages/about/about.css
@@ -60,7 +60,6 @@
   margin-bottom: 24px;
 }
 
-
 /* Deal */
 .deal__container {
   display: flex;
@@ -83,4 +82,7 @@
   font-size: 40px;
   font-weight: 500;
   line-height: 48px;
+}
+
+@media only screen and (max-width: 375px) {
 }
