--- a/pages/appdesign/appdesign.css
+++ b/pages/appdesign/appdesign.css
@@ -65,3 +65,37 @@
     color: rgba(51, 49, 54, 1);
   }
 }
+
+@media only screen and (max-width: 375px) {
+  /* Hero */
+  .app__hero {
+    background-color: var(--peach);
+    width: 375px;
+    height: 320px;
+    border-radius: 0;
+    background-image: url(../../images/shared/desktop/bg-pattern-small-circle.svg);
+    background-position: right;
+    background-repeat: no-repeat;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .app__hero-title {
+    font-size: 48px;
+    font-weight: 500;
+    line-height: 48px;
+    margin-bottom: 24px;
+  }
+
+  /* Cards section */
+
+  .app_cards {
+    margin-top: 96px;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+  }
+}
