--- a/pages/graphicdesign/graphicdesign.css
+++ b/pages/graphicdesign/graphicdesign.css
@@ -78,3 +78,85 @@
     }
   }
 }
+
+@media only screen and (max-width: 375px) {
+  /* Hero */
+  .graphic__hero {
+    background-color: var(--peach);
+    width: 375px;
+    height: 320px;
+    border-radius: 0;
+    background-image: url(../../images/shared/desktop/bg-pattern-small-circle.svg);
+    background-position: right;
+    background-repeat: no-repeat;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .app__hero-title {
+    font-size: 48px;
+    font-weight: 500;
+    line-height: 48px;
+    margin-bottom: 24px;
+  }
+
+  .graphic__hero-title {
+    font-size: 48px;
+    font-weight: 500;
+    line-height: 48px;
+  }
+  .graphic_hero-subtitle {
+    margin-top: 24px;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+  }
+
+  /* Cards */
+
+  .graphic__cards {
+    display: flex;
+    flex-direction: column;
+    gap:40px;
+    margin-top: 96px;
+  }
+
+  .graphic__card {
+    text-align: center;
+    background-color: rgba(253, 243, 240, 1);
+    border-radius: 15px;
+    width: 350px;
+    height: 478px;
+    cursor: pointer;
+    transition: 0.2s;
+    img {
+      width: 350px;
+      height: 320px;
+      border-radius: 15px 15px 0 0;
+    }
+    h3 {
+      margin-top: 32px;
+      font-size: 20px;
+      font-weight: 500;
+      line-height: 26px;
+      letter-spacing: 5px;
+      color: var(--peach);
+    }
+    p {
+      margin-top: 16px;
+      color: var(--black);
+    }
+    &:hover {
+      background-color: rgba(231, 129, 107, 1);
+      h3 {
+        color: var(--white);
+      }
+      p {
+        color: var(--white);
+      }
+    }
+  }
+}
