--- a/pages/webdesign/webdesign.css
+++ b/pages/webdesign/webdesign.css
@@ -67,7 +67,6 @@
   line-height: 26px;
   letter-spacing: 5px;
   color: var(--peach);
-  
 }
 .card__subtitle {
   color: var(--black);
@@ -76,4 +75,88 @@
   margin-top: 16px;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media only screen and (max-width: 375px) {
+  /* Hero */
+
+  .hero__container {
+    border-radius: 0;
+    background-color: var(--peach);
+    width: 375px;
+    height: 320px;
+    background-image: url(../../images/shared/desktop/bg-pattern-small-circle.svg);
+    background-position: right;
+    background-repeat: no-repeat;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .hero__title {
+    font-size: 32px;
+    font-weight: 500;
+    line-height: 36px;
+  }
+
+  .hero__subtitle {
+    margin-top: 24px;
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 25px;
+    text-align: center;
+    width: 329px;
+    height: 52px;
+  }
+
+  /* Cards */
+
+  .cards {
+    margin-top: 160px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
+  }
+  .card__item {
+    width: 350px;
+    height: 478px;
+    border-radius: 15px;
+    text-align: center;
+    background-color: #fdf3f0;
+    transition: 0.2s;
+    cursor: pointer;
+    &:hover {
+      background-color: var(--peach);
+      color: #fff;
+      .card__title,
+      .card__subtitle {
+        color: #fff;
+      }
+    }
+  }
+  .card__img {
+    width: 350px;
+    height: 320px;
+    border-radius: 15px 15px 0px 0px;
+  }
+  .card__title {
+    margin-top: 32px;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 26px;
+    letter-spacing: 5px;
+    color: var(--peach);
+  }
+  .card__subtitle {
+    color: var(--black);
+    width: 286px;
+    height: 52px;
+    margin-top: 16px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
