--- a/css/footer.css
+++ b/css/footer.css
@@ -38,7 +38,6 @@
 .sitefooter__line {
   margin-top: 40px;
   margin-bottom: 31px;
-  width: 1111px;
   height: 1px;
   background-color: rgba(255, 255, 255, 10%);
   border: 0;
@@ -58,7 +57,7 @@
   color: rgba(255, 255, 255, 50%);
   width: 350px;
   height: 78px;
-  margin-right: 197px;
+  margin-right: 0;
   font-weight: 700;
   a {
     color: rgba(255, 255, 255, 50%);
@@ -79,7 +78,6 @@
 
 @media only screen and (max-width: 375px) {
   .sitefooter {
-    background-color: var(--black);
     width: 100%;
     height: 815px;
     text-align: center;
@@ -121,7 +119,7 @@
   }
 
   .sitefooter__line {
-      display: none;
+    display: none;
   }
   .sitefooter__bottom {
     display: flex;
@@ -130,7 +128,7 @@
 
   .sitefooter__adress {
     width: 327px;
-    height: 78px;    
+    height: 78px;
     color: rgba(255, 255, 255, 50%);
     margin-top: 40px;
   }
@@ -140,7 +138,7 @@
     margin-bottom: 40px;
     color: rgba(255, 255, 255, 50%);
     width: 327px;
-    height: 78px;    
+    height: 78px;
     margin-right: 197px;
     font-weight: 700;
     a {
@@ -160,4 +158,7 @@
       fill: #ffad9b;
     }
   }
+}
+
+@media only screen and (max-width: 768px) {
 }
