--- a/css/global.css
+++ b/css/global.css
@@ -122,8 +122,10 @@ a {
   position: relative;
   top: 72px;
   background-color: var(--peach);
-  width: 1111px;
-  height: 292px;
+  /* width: 1111px;*/
+  height: 292px; 
+  width: 80%;
+  padding: 60px 58px 0;
   border-radius: 15px;
   background-image: url(../images/shared/desktop/bg-pattern-call-to-action.svg);
   background-position: right;
@@ -139,7 +141,6 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 72px 95px;
 }
 
 .aboutproject__title {
@@ -237,7 +238,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column; 
+    flex-direction: column;
     gap: 30px;
     div:nth-child(1) {
       width: 327px;
@@ -292,5 +293,36 @@ a {
     margin-bottom: 32px;
     width: 279px;
     height: 75px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .aboutproject {
+    margin-top: 88px;
+    position: relative;
+    top: 72px;
+    background-color: var(--peach);
+    /* width: 1111px;
+    height: 292px; */
+    /* padding: 60px 58px 0; */
+    padding: 57px 59px;
+    border-radius: 15px;
+    background-image: url(../images/shared/desktop/bg-pattern-call-to-action.svg);
+    background-position: right;
+    background-repeat: no-repeat;
+    a {
+      font-size: 15px;
+      font-weight: 500;
+      line-height: 21.68px;
+      letter-spacing: 1px;
+    }
+  }
+  .aboutproject__container,
+  .aboutproject__text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
   }
 }
