--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,9 @@
 .hero__container {
-  width: 1111px;
-  padding: 0 !important;
+  width: 100%;
+  padding: 145px 95px;
   margin: 0;
   display: flex;
   background-color: var(--peach);
-  height: 640px;
   border-radius: 15px;
   background-image: url(../images/home/desktop/bg-pattern-hero-home.svg);
   background-position: right;
@@ -12,29 +11,21 @@
   overflow: hidden;
 }
 
-.hero__text {
-  margin-top: 145px;
-  margin-left: 95px;
-}
 .hero__title {
   font-size: 48px;
   font-weight: 500;
   line-height: 48px;
-  width: 540px;
-  height: 165px;
 }
 .hero__subtitle {
   margin-top: 11px;
   margin-bottom: 58px;
+
   width: 445px;
-  height: 78px;
 }
 
 .hero__image {
   width: 550px;
   height: 850px;
-  position: relative;
-  top: 20px;
 }
 
 /* Design Cards */
@@ -45,27 +36,23 @@
 }
 
 .design__card-wrapper {
+  width: 100%;
+  height: 640px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   column-gap: 30px;
   row-gap: 24px;
   div:nth-child(1) {
-    width: 541px;
-    height: 640px;
     grid-column: 1 / 2;
     grid-row: 1 / 3;
     background-image: url(../images/home/desktop/image-web-design-large.jpg);
   }
   div:nth-child(2) {
-    width: 541px;
-    height: 308px;
     grid-column: 2 / 3;
     grid-row: 1 / 2;
     background-image: url(../images/home/desktop/image-app-design.jpg);
   }
   div:nth-child(3) {
-    width: 541px;
-    height: 308px;
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     background-image: url(../images/home/desktop/image-graphic-design.jpg);
@@ -131,11 +118,6 @@
     display: flex;
     border-radius: 0;
     flex-direction: column;
-    background-color: var(--peach);
-    background-image: url(../images/home/desktop/bg-pattern-hero-home.svg);
-    background-position: left;
-    background-repeat: no-repeat;
-    overflow: hidden;
   }
   .hero__text {
     text-align: center;
@@ -232,5 +214,60 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 26px;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .hero__text {
+    text-align: center;
+  }
+  .hero__image {
+    display: none;
+  }
+  .hero__subtitle {
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .design__card-wrapper {
+    width: 689px;
+    height: 649px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    row-gap: 25px;
+    div:nth-child(1) {
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      height: 200px;
+      grid-column: 1 / 2;
+      grid-row: 1 / 2;
+    }
+    div:nth-child(2) {
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      height: 200px;
+      grid-column: 1 / 2;
+      grid-row: 2 / 3;
+    }
+    div:nth-child(3) {
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      height: 200px;
+      grid-column: 1 / 2;
+      grid-row: 3 / 4;
+    }
+  }
+
+  .illustration__container {
+    flex-direction: column;
+    gap: 32px;
+  }
+
+  .illustration__card {
+    text-align: left;
+    display: flex;
+    gap: 48px;
   }
 }
