--- a/css/index.css
+++ b/css/index.css
@@ -36,7 +36,7 @@
 }
 
 .design__card-wrapper {
-  width: 100%;
+  width: 90vw;
   height: 640px;
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -109,7 +109,6 @@
   .hero__container {
     margin: 0;
     width: 100%;
-    height: 843px;
     padding: 0 !important;
     display: flex;
     border-radius: 0;
@@ -150,23 +149,23 @@
   }
 
   .design__card-wrapper {
+    max-width: 327px;
     margin-top: 120px;
     align-items: center;
     display: flex;
     flex-direction: column;
     gap: 24px;
     div:nth-child(1) {
-      width: 327px;
+      width: 90vw;
       height: 250px;
       background-image: url(../images/home/desktop/image-web-design-large.jpg);
     }
     div:nth-child(2) {
-      width: 327px;
-      height: 250px;
+      width: 90vw;
       background-image: url(../images/home/desktop/image-app-design.jpg);
     }
     div:nth-child(3) {
-      width: 327px;
+      width: 90vw;
       height: 250px;
       background-image: url(../images/home/desktop/image-graphic-design.jpg);
     }
@@ -188,9 +187,12 @@
   }
 
   .illustration__card {
+    display: flex;
+    flex-direction: column;
+  }
+  .illustration__text{
+    
     text-align: center;
-    width: 327px;
-    height: 412px;
   }
 
   .illustration__image {
