refactor header and layout styles for improved responsiveness and alignment

--- a/css/global.css
+++ b/css/global.css
@@ -123,7 +123,7 @@ a {
   top: 72px;
   background-color: var(--peach);
   /* width: 1111px;*/
-  height: 292px; 
+  height: 292px;
   width: 80%;
   padding: 60px 58px 0;
   border-radius: 15px;
@@ -240,6 +240,8 @@ a {
     align-items: center;
     flex-direction: column;
     gap: 30px;
+    margin-left: auto;
+    margin-right: auto;
     div:nth-child(1) {
       width: 327px;
       height: 250px;
