--- a/css/index.css
+++ b/css/index.css
@@ -149,6 +149,8 @@
   }
 
   .design__card-wrapper {
+    margin-left: auto;
+    margin-right: auto;
     max-width: 327px;
     margin-top: 120px;
     align-items: center;
@@ -190,8 +192,7 @@
     display: flex;
     flex-direction: column;
   }
-  .illustration__text{
-    
+  .illustration__text {
     text-align: center;
   }
 
